--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@mozilla/readability": "^0.6.0",
+    "cheerio": "^1.1.2",
     "jsdom": "^27.3.0",
     "next": "16.0.10",
     "openai": "^6.13.0",
